<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:fillViewport="false">
    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.myapplicationportfolio.MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:textSize="24dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_1"
            android:background="#2E3D49"
            android:textColor="#FFFFFF"
            android:id="@+id/button"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:width="200dp"
            android:layout_marginTop="15dp"
            android:onClick="toastMessage1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_2"
            android:background="#2E3D49"
            android:textColor="#FFFFFF"
            android:id="@+id/button2"
            android:layout_below="@+id/button"
            android:layout_alignLeft="@+id/button"
            android:layout_alignStart="@+id/button"
            android:width="200dp"
            android:layout_marginTop="15dp"
            android:onClick="toastMessage2"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_3"
            android:background="#2E3D49"
            android:textColor="#FFFFFF"
            android:id="@+id/button3"
            android:layout_below="@+id/button2"
            android:layout_alignLeft="@+id/button"
            android:layout_alignStart="@+id/button"
            android:width="200dp"
            android:layout_marginTop="15dp"
            android:onClick="toastMessage3"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_4"
            android:background="#2E3D49"
            android:textColor="#FFFFFF"
            android:id="@+id/button4"
            android:layout_below="@+id/button3"
            android:layout_alignLeft="@+id/button3"
            android:layout_alignStart="@+id/button3"
            android:width="200dp"
            android:layout_marginTop="15dp"
            android:onClick="toastMessage4"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_5"
            android:background="#2E3D49"
            android:textColor="#FFFFFF"
            android:id="@+id/button5"
            android:layout_below="@+id/button4"
            android:layout_alignLeft="@+id/button2"
            android:layout_alignStart="@+id/button2"
            android:width="200dp"
            android:layout_marginTop="15dp"
            android:onClick="toastMessage5"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_6"
            android:background="#2E3D49"
            android:textColor="#FFFFFF"
            android:id="@+id/button6"
            android:layout_below="@+id/button5"
            android:layout_alignLeft="@+id/button4"
            android:layout_alignStart="@+id/button4"
            android:width="200dp"
            android:layout_marginTop="15dp"
            android:onClick="toastMessage6"/>
    </RelativeLayout>
</ScrollView>
